gitops_archive/manifests/speedtest-tracker/install.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: speedtest-tracker
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: speedtest-tracker
  name: speedtest-tracker
  labels:
    io.kompose.service: speedtest-tracker
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: speedtest-tracker
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        avp.kubernetes.io/path: "secret/data/speedtestTracker"
      labels:
        io.kompose.service: speedtest-tracker
    spec:
      containers:
        - env:
            - name: DB_CONNECTION
              value: pgsql
            - name: DB_DATABASE
              value: speedtest_tracker
            - name: DB_HOST
              value: vm303.local.lan
            - name: DB_PASSWORD
              value: <DB_PASSWORD>
            - name: DB_PORT
              value: "5432"
            - name: DB_USERNAME
              value: <DB_USER>
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
          image: ghcr.io/alexjustesen/speedtest-tracker:latest
          name: speedtest-tracker
          ports:
            - containerPort: 80
            - containerPort: 443
          resources:
            limits:
              cpu: 500m
              memory: 500Mi
            requests:
              cpu: 100m
              memory: 100Mi
          volumeMounts:
            - mountPath: /config
              name: speedtest-tracker-claim
            - mountPath: /etc/ssl/web
              name: speedtest-tracker-claim
      restartPolicy: Always
      volumes:
        - name: speedtest-tracker-claim
          persistentVolumeClaim:
            claimName: speedtest-tracker-claim
status: {}
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: speedtest-ingress
  namespace: speedtest-tracker
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`speedtest.local.timmybtech.com`) # create A record in pihole
      kind: Rule
      services:
        - name: speedtest-tracker
          port: 8443
  tls:
    secretName: local-timmybtech-com-tls # or local-example-com-staging-tls
---
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  creationTimestamp: null
  labels:
    io.kompose.service: speedtest-tracker
  name: speedtest-tracker
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 80
    - name: "8443"
      port: 8443
      targetPort: 443
  selector:
    io.kompose.service: speedtest-tracker
status:
  loadBalancer: {}
---
# apiVersion: v1
# kind: ServiceAccount
# metadata:
#   name: speedtest
#   namespace: speedtest-tracker
